--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="header">
       <div class="header_logo">
-        <img style="padding-right: 42px;" src="img/header_logo.png" alt="logo">
-        <img src="img/search.svg" alt="search">
+        <img style="padding-right: 42px" src="img/header_logo.png" alt="logo" />
+        <img src="img/search.svg" alt="search" />
       </div>
       <div class="header_menu">
-        <img src="img/Button copy.svg" alt="menu">
+        <img src="img/Button copy.svg" alt="menu" />
       </div>
-      
+    </div>
+    <div class="top_content">
+      <div class="top_content item-flex">
+        <div class="item top-item1"><img src="img/top-content.png" /></div>
+        <div class="item top-item2">
+          <div class="top-write1"></div>
+          <div class="top-write2">
+            <h1 class="top_heading">THE BRAND</h1>
+            <p class="text top_text">OF LUXERIOUS FASHION</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
