--- a/index.html
+++ b/index.html
@@ -7,24 +7,61 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="header">
-      <div class="header_logo">
-        <img style="padding-right: 42px" src="img/header_logo.png" alt="logo" />
-        <img src="img/search.svg" alt="search" />
+    <div class="conteiner">
+      <div class="header">
+        <div class="header_logo">
+          <img
+            style="padding-right: 42px"
+            src="img/header_logo.png"
+            alt="logo"
+          />
+          <img src="img/search.svg" alt="search" />
+        </div>
+        <div class="header_menu">
+          <img src="img/Button copy.svg" alt="menu" />
+        </div>
       </div>
-      <div class="header_menu">
-        <img src="img/Button copy.svg" alt="menu" />
-      </div>
-    </div>
-    <div class="top_content">
-      <div class="top_content item-flex">
-        <div class="item top-item1"><img src="img/top-content.png" /></div>
-        <div class="item top-item2">
-          <div class="top-write1"></div>
-          <div class="top-write2">
-            <h1 class="top_heading">THE BRAND</h1>
-            <p class="text top_text">OF LUXERIOUS FASHION</p>
+      <div class="top_content">
+        <div class="top_content item-flex">
+          <div class="item top-item1"><img src="img/top-content.png" /></div>
+          <div class="item top-item2">
+            <div class="top-write1"></div>
+            <div class="top-write2">
+              <h1 class="top_heading">THE BRAND</h1>
+              <p class="text top_text">OF LUXERIOUS</p>
+              <p class="text top_text_pink">FASHION</p>
+            </div>
           </div>
+        </div>
+      </div>
+      <div class="card-menu">
+        <div class="container card_top">
+          <div class="card_img">
+            <img class="project__img" src="img/foto1.png" alt="photo" />
+            <p class="card_top__text">30% OFF</p>
+            <p class="card_top__text_pink">FOR WOMEN</p>
+          </div>
+          <div class="card_img">
+            <img class="project__img" src="img/foto2.png" alt="photo" />
+            <p class="card_top__text">HOT DEAL</p>
+            <p class="card_top__text_pink">FOR MEN</p>
+          </div>
+          <div class="card_img">
+            <img class="project__img" src="img/foto3.png" alt="photo" />
+            <p class="card_top__text">NEW ARRIVALS</p>
+            <p class="card_top__text_pink">FOR KIDS</p>
+          </div>
+        </div>
+        <div class="container card-bottom">
+          <div class="card_bot">
+            <img class="project__img" src="img/foto 4.png" alt="photo" />
+            <p class="card_bot__text">LUXIROUS & TRENDY</p>
+            <p class="card_bot__text_pink">ACCESORIES</p>
+          </div>
+        </div>
+        <div class="container text_bottom">
+          <h4>Fetured Items</h4>
+          <p>Shop for items based on what we featured in this week</p>
         </div>
       </div>
     </div>
