--- a/index.html
+++ b/index.html
@@ -7,21 +7,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="conteiner">
-      <div class="header">
-        <div class="header_logo">
-          <img
-            style="padding-right: 42px"
-            src="img/header_logo.png"
-            alt="logo"
-          />
-          <img src="img/search.svg" alt="search" />
-        </div>
-        <div class="header_menu">
-          <img src="img/Button copy.svg" alt="menu" />
+    <div class="header">
+      <div class="conteiner">
+        <div class="header_box">
+          <div class="header_logo">
+            <img src="img/header_logo.png" alt="logo" />
+            <img src="img/search.svg" alt="search" />
+          </div>
+          <div class="header_menu">
+            <img src="img/Button copy.svg" alt="menu" />
+          </div>
         </div>
       </div>
-      <div class="top_content">
+    </div>
+    <div class="top_content">
+      <div class="conteiner top_content">
         <div class="top_content item-flex">
           <div class="item top-item1"><img src="img/top-content.png" /></div>
           <div class="item top-item2">
@@ -34,7 +34,9 @@
           </div>
         </div>
       </div>
-      <div class="card-menu">
+    </div>
+    <div class="card-menu">
+      <div class="conteiner">
         <div class="container card_top">
           <div class="card_img">
             <img class="project__img" src="img/foto1.png" alt="photo" />
@@ -52,18 +54,61 @@
             <p class="card_top__text_pink">FOR KIDS</p>
           </div>
         </div>
-        <div class="container card-bottom">
-          <div class="card_bot">
-            <img class="project__img" src="img/foto 4.png" alt="photo" />
-            <p class="card_bot__text">LUXIROUS & TRENDY</p>
-            <p class="card_bot__text_pink">ACCESORIES</p>
-          </div>
-        </div>
-        <div class="container text_bottom">
-          <h4>Fetured Items</h4>
-          <p>Shop for items based on what we featured in this week</p>
+      </div>
+      <div class="container card-bottom">
+        <div class="card_bot">
+          <img class="project__img" src="img/foto 4.png" alt="photo" />
+          <p class="card_bot__text">LUXIROUS & TRENDY</p>
+          <p class="card_bot__text_pink">ACCESORIES</p>
         </div>
       </div>
-    </div>
+      <div class="container text_bottom">
+        <h4>Fetured Items</h4>
+        <p>Shop for items based on what we featured in this week</p>
+      </div>
+      <div class="conteiner card_product">
+        <div class="one_product">
+          <img class="project__img" src="img/card1.jpg" alt="photo" />
+          <div class="poduct_text">
+            <p class="product_top_text">ELLERY X M'O CAPSULE</p>
+            <p class="product_bot_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+          </div>
+        </div>
+        <div class="one_product">
+          <img class="project__img" src="img/card2.jpg" alt="photo" />
+          <div class="poduct_text">
+            <p class="product_top_text">ELLERY X MO CAPSULE</p>
+            <p class="product_bot_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+          </div>
+        </div>
+        <div class="one_product">
+          <img class="project__img" src="img/card3.jpg" alt="photo" />          
+          <div class="poduct_text">
+            <p class="product_top_text">ELLERY X M'O CAPSULE</p>
+            <p class="product_bot_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+          </div>
+        </div>
+        <div class="one_product">
+          <img class="project__img" src="img/card4.jpg" alt="photo" />          
+          <div class="poduct_text">
+            <p class="product_top_text">ELLERY X M'O CAPSULE</p>
+            <p class="product_bot_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+          </div>
+        </div>
+        <div class="one_product">
+          <img class="project__img" src="img/card5.jpg" alt="photo" />          
+          <div class="poduct_text">
+            <p class="product_top_text">ELLERY X M'O CAPSULE</p>
+            <p class="product_bot_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+          </div>
+        </div>
+        <div class="one_product">
+          <img class="project__img" src="img/card6.jpg" alt="photo" />          
+          <div class="poduct_text">
+            <p class="product_top_text">ELLERY X M'O CAPSULE</p>
+            <p class="product_bot_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+          </div>
+        </div>
+      </div>
   </body>
 </html>
