--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="header">
-      <div class="conteiner">
+      <div class="conteiner header">
         <div class="header_box">
           <div class="header_logo">
             <img src="img/header_logo.png" alt="logo" />
@@ -21,7 +21,7 @@
       </div>
     </div>
     <div class="top_content">
-      <div class="conteiner top_content">
+      <div class="conteiner top-content">
         <div class="top_content item-flex">
           <div class="item top-item1"><img src="img/top-content.png" /></div>
           <div class="item top-item2">
@@ -36,33 +36,31 @@
       </div>
     </div>
     <div class="card-menu">
-      <div class="conteiner">
-        <div class="container card_top">
-          <div class="card_img">
-            <img class="project__img" src="img/foto1.png" alt="photo" />
-            <p class="card_top__text">30% OFF</p>
-            <p class="card_top__text_pink">FOR WOMEN</p>
-          </div>
-          <div class="card_img">
-            <img class="project__img" src="img/foto2.png" alt="photo" />
-            <p class="card_top__text">HOT DEAL</p>
-            <p class="card_top__text_pink">FOR MEN</p>
-          </div>
-          <div class="card_img">
-            <img class="project__img" src="img/foto3.png" alt="photo" />
-            <p class="card_top__text">NEW ARRIVALS</p>
-            <p class="card_top__text_pink">FOR KIDS</p>
-          </div>
+      <div class="conteiner card_top">
+        <div class="card_img">
+          <img class="project__img" src="img/foto1.png" alt="photo" />
+          <p class="card_top__text">30% OFF</p>
+          <p class="card_top__text_pink">FOR WOMEN</p>
+        </div>
+        <div class="card_img">
+          <img class="project__img" src="img/foto2.png" alt="photo" />
+          <p class="card_top__text">HOT DEAL</p>
+          <p class="card_top__text_pink">FOR MEN</p>
+        </div>
+        <div class="card_img">
+          <img class="project__img" src="img/foto3.png" alt="photo" />
+          <p class="card_top__text">NEW ARRIVALS</p>
+          <p class="card_top__text_pink">FOR KIDS</p>
         </div>
       </div>
-      <div class="container card-bottom">
+      <div class="conteiner card-bottom">
         <div class="card_bot">
           <img class="project__img" src="img/foto 4.png" alt="photo" />
           <p class="card_bot__text">LUXIROUS & TRENDY</p>
           <p class="card_bot__text_pink">ACCESORIES</p>
         </div>
       </div>
-      <div class="container text_bottom">
+      <div class="conteiner text_bottom">
         <h4>Fetured Items</h4>
         <p>Shop for items based on what we featured in this week</p>
       </div>
@@ -71,44 +69,69 @@
           <img class="project__img" src="img/card1.jpg" alt="photo" />
           <div class="poduct_text">
             <p class="product_top_text">ELLERY X M'O CAPSULE</p>
-            <p class="product_bot_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+            <p class="product_bot_text">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </p>
+            <p class="price">$52.00</p>
           </div>
         </div>
         <div class="one_product">
           <img class="project__img" src="img/card2.jpg" alt="photo" />
           <div class="poduct_text">
             <p class="product_top_text">ELLERY X MO CAPSULE</p>
-            <p class="product_bot_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+            <p class="product_bot_text">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </p>
+            <p class="price">$52.00</p>
           </div>
         </div>
         <div class="one_product">
-          <img class="project__img" src="img/card3.jpg" alt="photo" />          
+          <img class="project__img" src="img/card3.jpg" alt="photo" />
           <div class="poduct_text">
             <p class="product_top_text">ELLERY X M'O CAPSULE</p>
-            <p class="product_bot_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+            <p class="product_bot_text">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </p>
+            <p class="price">$52.00</p>
           </div>
         </div>
         <div class="one_product">
-          <img class="project__img" src="img/card4.jpg" alt="photo" />          
+          <img class="project__img" src="img/card4.jpg" alt="photo" />
           <div class="poduct_text">
             <p class="product_top_text">ELLERY X M'O CAPSULE</p>
-            <p class="product_bot_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+            <p class="product_bot_text">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </p>
+            <p class="price">$52.00</p>
           </div>
         </div>
         <div class="one_product">
-          <img class="project__img" src="img/card5.jpg" alt="photo" />          
+          <img class="project__img" src="img/card5.jpg" alt="photo" />
           <div class="poduct_text">
             <p class="product_top_text">ELLERY X M'O CAPSULE</p>
-            <p class="product_bot_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+            <p class="product_bot_text">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </p>
+            <p class="price">$52.00</p>
           </div>
         </div>
         <div class="one_product">
-          <img class="project__img" src="img/card6.jpg" alt="photo" />          
+          <img class="project__img" src="img/card6.jpg" alt="photo" />
           <div class="poduct_text">
             <p class="product_top_text">ELLERY X M'O CAPSULE</p>
-            <p class="product_bot_text">Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
+            <p class="product_bot_text">
+              Known for her sculptural takes on traditional tailoring,
+              Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
+            </p>
+            <p class="price">$52.00</p>
           </div>
         </div>
       </div>
+    </div>
   </body>
 </html>
