--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap"
+      rel="stylesheet"
+    />
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <style>
+      .pink {
+        color: #f16d7f;
+      }
+    </style>
   </head>
   <body>
     <div class="header">
       <div class="conteiner header">
         <div class="header_box">
           <div class="header_logo">
-            <img src="img/header_logo.png" alt="logo" />
+            <img
+              src="img/header_logo.png"
+              style="padding-right: 41px"
+              alt="logo"
+            />
             <img src="img/search.svg" alt="search" />
           </div>
           <div class="header_menu">
@@ -28,8 +43,9 @@
             <div class="top-write1"></div>
             <div class="top-write2">
               <h1 class="top_heading">THE BRAND</h1>
-              <p class="text top_text">OF LUXERIOUS</p>
-              <p class="text top_text_pink">FASHION</p>
+              <p class="text top_text">
+                OF LUXERIOUS <span class="pink">FASHION</span>
+              </p>
             </div>
           </div>
         </div>
