add @media (min-width: 320px) and (max-width: 767x)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     </div>
     <div class="top_content">
       <div class="top_content item-flex">
-        <div class="item top-item1"><img src="img/top-content.png" /></div>
+        <div class="item top-item1">
+          <img class="img_top" src="img/top-content.png" />
+        </div>
         <div class="item top-item2">
           <div class="top-write1"></div>
           <div class="top-write2">
