add @media (min-width: 320px) and (max-width: 767x)

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     </div>
     <div class="card-menu">
-      <div class="conteiner card_top">
+      <div class="conteiner card_top center">
         <div class="card_img">
           <img class="project__img" src="img/foto1.png" alt="photo" />
           <p class="card_top__text">30% OFF</p>
@@ -77,7 +77,8 @@
         </div>
       </div>
       <div class="conteiner text_bottom">
-        <h4>Fetured Items</h4>
+        <p>Fetured Items</p>
+        <p></p>
         <p>Shop for items based on what we featured in this week</p>
       </div>
       <div class="conteiner card_product">
