--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="header">
-      <div class="conteiner header">
+      <div class="header center">
         <div class="header_box">
           <div class="header_logo">
             <img
@@ -52,7 +52,7 @@
       </div>
     </div>
     <div class="card-menu">
-      <div class="conteiner card_top center">
+      <div class="card_top center center">
         <div class="card_img">
           <img class="project__img" src="img/foto1.png" alt="photo" />
           <p class="card_top__text">30% OFF</p>
@@ -69,19 +69,20 @@
           <p class="card_top__text_pink">FOR KIDS</p>
         </div>
       </div>
-      <div class="conteiner card-bottom">
+      <div class="card-bottom center">
         <div class="card_bot">
           <img class="project__img" src="img/foto 4.png" alt="photo" />
           <p class="card_bot__text">LUXIROUS & TRENDY</p>
           <p class="card_bot__text_pink">ACCESORIES</p>
         </div>
       </div>
-      <div class="conteiner text_bottom">
-        <p>Fetured Items</p>
-        <p></p>
-        <p>Shop for items based on what we featured in this week</p>
+      <div class="text_bottom center">
+        <p class="text_top_bottom">Fetured Items</p>
+        <p class="text_bot_bottom">
+          Shop for items based on what we featured in this week
+        </p>
       </div>
-      <div class="conteiner card_product">
+      <div class="card_product center">
         <div class="one_product">
           <img class="project__img" src="img/card1.jpg" alt="photo" />
           <div class="poduct_text">
@@ -147,6 +148,9 @@
             </p>
             <p class="price">$52.00</p>
           </div>
+        </div>
+        <div class="all_product center">
+          <p class="text_all_product">Browse All Product</p>
         </div>
       </div>
     </div>
