@media (max-width: 1024px)  .one_product

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     </div>
     <div class="card-menu">
-      <div class="card_top center center">
+      <div class="card_top center">
         <div class="card_img">
           <img class="project__img" src="img/foto1.png" alt="photo" />
           <p class="card_top__text">30% OFF</p>
@@ -70,7 +70,7 @@
         </div>
       </div>
       <div class="card-bottom center">
-        <div class="card_bot">
+        <div class="card_bot center">
           <img class="project__img" src="img/foto 4.png" alt="photo" />
           <p class="card_bot__text">LUXIROUS & TRENDY</p>
           <p class="card_bot__text_pink">ACCESORIES</p>
